# email-sender

./: .env--example  .gitignore  README.md  pyproject.toml
src/: config.py  main.py
src/agent/: __init__.py  emailAgent.py
src/agent/Prompt/: agentPrompts.yaml
src/agent/Tools/: __init__.py
src/agent/Tools/MjmlCreatorTool/: MjmlGenerator.py  __init__.py
src/agent/Tools/createFolderFile/: __init__.py  createFile.py  createFolder.py
src/agent/Tools/executeCommandTool/: __init__.py  runBuildTool.py
src/agent/Tools/plainMailTool/: __init__.py  plainMail.py
src/agent/Tools/renderTemplateTool/: __init__.py  renderTemplate.py
src/agent/Tools/sendHtmlEmail/: __init__.py  fancymailTool.py
src/agent/Tools/writeFileTool/: __init__.py  writefile.py
src/handler/: __init__.py  agentHandler.py
src/utils/: __init__.py  promptManager.py  utilities.py
